tighten up vertical spacing, fix container width

--- a/styles.scss
+++ b/styles.scss
@@ -23,11 +23,12 @@ footer {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    margin: 0 0 10px 0;
 }
 
 button {
